--- a/.gitignore
+++ b/.gitignore
@@ -8,9 +8,55 @@ build/
 # macOS
 .DS_Store
 
-# Logs and OS files
+# Dependencies
+/.pnp
+.pnp.js
+
+# Testing
+/coverage
+
+# Next.js
+/.next/
+/out/
+
+# Production
+/build
+
+# Misc
+*.pem
+
+# Debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Local env files
+.env*.local
+.env
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Vercel
+.vercel
+
+# Typescript
+*.tsbuildinfo
+next-env.d.ts
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS
+Thumbs.db
+
+# Logs
+logs
 *.log
 
-# Environment files (if any secrets used)
-.env
-.env.*
+# Optional
+.turbo
