--- a/.gitignore
+++ b/.gitignore
@@ -8,55 +8,41 @@ build/
 # macOS
 .DS_Store
 
-# Dependencies
-/.pnp
-.pnp.js
+# Logs and OS files
+*.log
 
-# Testing
+# Environment files (if any secrets used)
+.env
+.env.*
+
+# dependencies
+/.pnp
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/versions
+
+# testing
 /coverage
 
-# Next.js
+# next.js
 /.next/
 /out/
 
-# Production
-/build
-
-# Misc
+# misc
 *.pem
 
-# Debug
+# debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+.pnpm-debug.log*
 
-# Local env files
-.env*.local
-.env
-.env.development.local
-.env.test.local
-.env.production.local
-
-# Vercel
+# vercel
 .vercel
 
-# Typescript
+# typescript
 *.tsbuildinfo
 next-env.d.ts
-
-# IDE
-.vscode/
-.idea/
-*.swp
-*.swo
-*~
-
-# OS
-Thumbs.db
-
-# Logs
-logs
-*.log
-
-# Optional
-.turbo
